--- a/my-actor/.actor/Dockerfile
+++ b/my-actor/.actor/Dockerfile
@@ -1,38 +1,14 @@
-# First, specify the base Docker image.
-# You can see the Docker images from Apify at https://hub.docker.com/r/apify/.
-# You can also use any other image from Docker Hub.
-FROM apify/actor-python:3.13
+FROM python:3.9-slim
 
-# Second, copy just requirements.txt into the Actor image,
-# since it should be the only file that affects the dependency install in the next step,
-# in order to speed up the build
-COPY requirements.txt ./
+# Set the working directory inside the container
+WORKDIR /src
 
-# Install the packages specified in requirements.txt,
-# Print the installed Python version, pip version
-# and all installed packages with their versions for debugging
-RUN echo "Python version:" \
- && python --version \
- && echo "Pip version:" \
- && pip --version \
- && echo "Installing dependencies:" \
- && pip install -r requirements.txt \
- && echo "All installed Python packages:" \
- && pip freeze
+# Install necessary dependencies
+COPY requirements.txt /src/
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Next, copy the remaining files and directories with the source code.
-# Since we do this after installing the dependencies, quick build will be really fast
-# for most source file changes.
-COPY . ./
+# Copy the rest of your files into the container
+COPY . /src/
 
-# Use compileall to ensure the runnability of the Actor Python code.
-RUN python3 -m compileall -q .
-
-# Create and run as a non-root user.
-RUN useradd --create-home apify && \
-    chown -R apify:apify ./
-USER apify
-
-# Specify how to launch the source code of your Actor.
-# By default, the "python3 -m ." command is run
-CMD ["python3", "-m", "src"]
+# Set the entrypoint to run your Python script
+ENTRYPOINT ["python", "src/main.py"]
